--- a/index.html
+++ b/index.html
@@ -117,22 +117,16 @@
     <h1 class="story-heading">Maryland Articles</h1><br>
 
     <div class="row">
-      <div class="main-article">
+      <div class="col-sm-4">
         <img src="images/gavel.jpg" alt="..." class="img-thumbnail" style="float:left;">
+      </div>
+      <div class="col-sm-8">
         <h3>November 16, 2019</h3>
         <h4>How states compensate exonerees</h4>
         <p class="description-text">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
       </div>
     </div>
 
-    <div class="row">
-      <div class="main-article">
-        <img src="images/gavel.jpg" alt="..." class="img-thumbnail" style="float:left;">
-        <h3>November 16, 2019</h3>
-        <h4>How states compensate exonerees</h4>
-        <p class="description-text">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-      </div>
-    </div>
 
   </div><br><!-- END Maryland Container -->
 
