--- a/story-template.html
+++ b/story-template.html
@@ -182,6 +182,22 @@
           <p class="opening-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
           <br><br><br>
 
+          <div class="center">
+
+            <div class="center">
+        <img src="images/gavel-thumb.jpg">
+        <div class="btnText">
+          Button
+          <span><audio controls>
+  <source src="horse.ogg" type="audio/ogg">
+  <source src="horse.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio></span>
+        </div>
+    </div>
+
+            </div><br><br>
+
 
       <div class="media">
         <div class="media-left media-middle">
@@ -239,7 +255,16 @@
 
 
 
-
+      <div class="center">
+           <img src="images/gavel-thumb.jpg">
+           <div class="btnText">
+             Button
+             <span>Button alt</span>
+             <span><audio controls>
+               <source src="horse.ogg" type="audio/ogg">
+             </audio></span>
+           </div>
+       </div>
 
 
 
