--- a/index.html
+++ b/index.html
@@ -105,24 +105,28 @@
       <!-- <hr style="border: 1px solid #CAEBF2; width:20%;"> -->
 
     <!-- <h1 style="padding-bottom:1em;">"I made a mistake"</h1>-->
+    <p class="opening-text"> Maryland is one of three states where the governor must sign paroles for lifers. In the wake of a Willie Horton-like case in 1995, Democratic governor Parris Glendening joined the tough-on-crime crowd. No matter how good the behavior in prison, he declared, “life means life” - an absolutism he has come to regret. But for many juvenile lifers who expected to be paroled after 15 years, the state did not keep its end of the bargain.</p><br>
+
+    <hr style="width:20%; border:1px solid white;"><br><br>
 
     <div class="pbs-video">
       <div class="embed-responsive embed-responsive-16by9">
         <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/M2GgIXkvFeE"></iframe>
       </div>
-      <!-- <p class="video-caption">Video courtesy PBS NewsHour, produced in partnership with Injustice Watch and Capital News Service. It was produced by John Yang of PBS NewsHour and Julia Heimlich, Anna Muckerman, Pablo Roa and Mia Salenetri of Capital News Service.</p> -->
+      <p class="video-caption">Video courtesy PBS NewsHour, produced in partnership with the Howard Center for Investigative Journalism and Capital News Service. It was produced by John Yang of PBS NewsHour and Camila Velloso, Hannah Gaskill, Emily Top, Athiyah Azeem, Dominique Janifer, Lynsey Jeffery, Jamie Kerner, Lauren Pery, Sara Salimi and DeLon Thorton of Capital News Service.</p>
     </div><br>
 
+
+    <!-- <p class="caption">Video courtesy PBS NewsHour, produced in partnership with Injustice Watch and Capital News Service. It was produced by John Yang of PBS NewsHour and Camila Velloso, Hannah Gaskill, Emily Top, Athiyah Azeem, Dominique Janifer, Lynsey Jeffery, Jamie Kerner, Lauren Pery, Sara Salimi and DeLon Thorton of Capital News Service.</p><br>-->
+
+
     <h1>Unequal Justice: Maryland's Parole System</h1>
-    <p class="author"> BY PBS NEWSHOUR AND CNS STAFF </p>
+    <p class="author"> BY HANNAH GASKILL </p>
     <p class="date"> December 15, 2019</p><br>
-    <p class="caption">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Video courtesy PBS NewsHour, produced in partnership with Injustice Watch and Capital News Service. It was produced by John Yang of PBS NewsHour and Camila Velloso, Hannah Gaskill, Emily Top, Athiyah Azeem, Dominique Janifer, Lynsey Jeffery, Jamie Kerner, Lauren Pery, Sara Salimi and DeLon Thorton of Capital News Service.</p><br>
+    <p class="caption">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p><br>
     <a href="#"><p class="more">READ MORE: Maryland juvenile lifers denied meaningful opportunity for release despite parole-eligible sentences <p></a><br><br>
 
-    <hr style="border: 1px solid white; width:20%;">
-
-    <br>
-
+<hr style="border: 1px solid white; width:20%;">
     <h1>Meet the juvenile lifers</h1>
     <p class="opening-text">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p><br><br>
 
@@ -131,22 +135,22 @@
 
 <div class="row">
   <div class="col-sm-12 col-md-12 col-lg-4">
-    <img src="images/karriem-elamin.jpg" style="width:100%;">
+    <img src="images/earl-young.jpg" style="width:100%;">
     <div class="card">
       <div class="card-body">
         <h5 class="card-title">Earl Young</h5>
         <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Read more</a>
+        <button class="button-group"><a>Read more</a></button>
       </div>
     </div>
   </div>
   <div class="col-sm-12 col-md-12 col-lg-4">
-    <img src="images/etta-myers.jpg" style="width:100%;">
+    <img src="images/mary-bey.jpg" style="width:100%;">
     <div class="card">
       <div class="card-body">
         <h5 class="card-title">Mary Brown-Bey</h5>
         <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Read more</a>
+        <button class="button-group"><a>Read more</a></button>
       </div>
     </div>
   </div>
@@ -156,7 +160,7 @@
       <div class="card-body">
         <h5 class="card-title">Kareem Hasan</h5>
         <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Read more</a>
+        <button class="button-group"><a>Read more</a></button>
       </div>
     </div>
   </div>
@@ -189,7 +193,7 @@
 
   <!-- START The Nation Container -->
 
-  <div id="nation-container">
+  <div id="nation-container"><br>
 
     <p class="opening-text">America’s incarceration rate is the highest in the world. Nearly 2.3 million people are currently locked up. Tough-on-crime policies from the 90s drastically increased the country’s prison population. States cracked down on juvenile crimes amid fears of a new generation of criminals - the “superpredator.” In the early 2000s, the Supreme Court established different sentencing standards for juveniles on four different occasions. The Court prohibited juvenile life without parole sentences in 2010 and made that decision retroactive in 2016. Here's how some states have responded to the rulings: </p><br>
     <hr style="width:20%; border:1px solid white;"><br><br>
@@ -202,6 +206,7 @@
         <h3>October 16, 2019</h3>
         <a href="#" style="color: white;"><h4>Pennsylvania redresses juvenile lifer cases</h4></a>
         <p class="description-text">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+        <p class="author-two"> BY CAMILA VELLOSO </p>
       </div>
     </div><br><br>
 
@@ -213,17 +218,19 @@
         <h3>November 20, 2019</h3>
         <a href="#" style="color: white;"><h4>States with worst records of juvenile lifer incarceration</h4></a>
         <p class="description-text">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+        <p class="author-two"> BY RIIN ALJAS </p>
       </div>
     </div><br><br>
 
     <div class="row">
       <div class="col-lg-3 col-md-12 col-sm-12">
-        <a href="#"><img src="images/prison-thumb.jpg" alt="..." style="float:left;"></a>
+        <a href="#"><img src="images/prison.jpg" alt="..." style="float:left;"></a>
       </div>
       <div class="col-lg-9 col-md-12 col-sm-12">
         <h3>December 7, 2019</h3>
         <a href="#" style="color: white;"><h4>Parole in the hands of governors</h4></a>
         <p class="description-text">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+        <p class="author-two"> BY EMILY TOP </p>
       </div>
     </div><br><br>
 
@@ -235,25 +242,26 @@
         <h3>December 10, 2019</h3>
         <a href="#" style="color: white;"><h4>Four Supreme Court decisions that changed sentencing for juveniles</h4></a>
         <p class="description-text">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+        <p class="author-two"> BY HORUS ALAS </p>
       </div>
     </div><br><br>
 
   </div><!-- END The Nation Container -->
 
-  <hr style="border: 1px solid white; width:80%;"><br>
+  <hr style="border: 1px solid white; width:50%;"><br>
 
 
-  <h1 style="color: #FF3B3F; font-size: 1.5em;">About the project</h1><br>
+  <h1 style="color: #B5A7FA; font-size: 1.5em;">About the project</h1><br>
   <p class="about">Sed ullamcorper morbi tincidunt ornare massa eget. Dignissim diam quis enim lobortis scelerisque. Morbi blandit cursus risus at.
     <br><br> Mus mauris vitae ultricies leo integer malesuada. Eget nunc lobortis mattis aliquam faucibus purus. Mattis pellentesque id nibh tortor id aliquet lectus.
     <br><br> Justo eget magna fermentum iaculis eu non diam. Magna fringilla urna porttitor rhoncus dolor purus non. Id neque aliquam vestibulum morbi blandit cursus.
     <br><br>Nunc sed id semper risus in. Vitae congue eu consequat ac felis donec et odio. Ullamcorper velit sed ullamcorper morbi tincidunt ornare. Pretium quam vulputate dignissim suspendisse in.
     <br><br>Et tortor consequat id porta nibh venenatis cras sed. Nibh mauris cursus mattis molestie a. Imperdiet dui accumsan sit amet. Arcu risus quis varius quam quisque id. Vel fringilla est ullamcorper eget.
   </p><br><br>
-  <h1 style="color: #FF3B3F; font-size: 1.5em;">Credits</h1><br>
-  <p class="credits"><b>Web design and development:</b> Camila Velloso<br><br>
+  <h1 style="color: #B5A7FA; font-size: 1.5em;">Credits</h1><br>
+  <p class="credits"><b>Webite design and development:</b> Camila Velloso<br><br>
                      <b>Reporting and writing:</b> Camila Velloso, Hannah Gaskill, Emily Top, Athiyah Azeem, Dominique Janifer, Lynsey Jeffery, Jamie Kerner, Lauren Pery, Sara Salimi and DeLon Thorton<br><br>
-                     <b>Video editing:</b> DeLon Thorton and Camila Velloso<br><br>
+                     <b>Video editing:</b> TBD<br><br>
                      <b>Podcasts:</b> Hannah Gaskill<br><br>
                      <b>Project editors:</b> Tom Bettag, Adam Marton, Sean Mussenden and Kathy Best<br><br>
                      <b>Audience engagement:</b> Alex Pyles<br><br>
