--- a/story-template1.html
+++ b/story-template1.html
@@ -41,7 +41,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.6.13/c3.min.js"></script>
 
     <!-- our CSS  -->
-    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/common1.css">
 
     <!-- Fontawesome  -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
@@ -72,11 +72,19 @@
 
 <body>
 
-<header>
-    <div id="tophat">Howard Center for Investigative Journalism | CNS | PBS</div>
+<!-- START Hero Container -->
+<div class="hero-container">
+  <div id="tophat">Howard Center for Investigative Journalism | CNS | NPR</div>
+  <div class="cover-img relative-img" style="background-image: url('images/main-img.jpg')"></div>
 
-    <img src="images/main-img.jpg" class="img-fluid" alt="Responsive image">
-</header>
+</div> <!-- END Hero Container -->
+
+<!-- START Main Story Container -->
+
+<div class="story-container">
+  <a name="story"><div class="container"></a><br><br>
+    <p class="caption">(Top photo by Camila Velloso | Capital News Service)</p><br><br>
+
 
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p><br><br>
 
@@ -84,6 +92,9 @@
 
 
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p><br><br>
+
+</div>
+</div>
 
 </body>
 </html>
