--- a/profile.html
+++ b/profile.html
@@ -73,7 +73,10 @@
 <body>
 
 
-<div class="hero-container">
+
+  <!-- START Hero Container -->
+  <div class="hero-container">
+
   <div class="column left">
       <div id="tophat">Howard Center for Investigative Journalism | CNS | PBS</div>
     <div class="content">
@@ -87,11 +90,12 @@
   <div class="column right"></div>
 
 
-</div><br><br>
+</div> <!-- END Hero Container -->
 
+<!-- START Main Story Container -->
 
-
-<div class="container">
+<div class="story-container">
+  <a name="story"><div class="container"></a><br><br><br>
 
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p><br><br>
 
@@ -100,6 +104,7 @@
 
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p><br><br>
 
+</div>
 </div>
 
 </body>
