--- a/profile.html
+++ b/profile.html
@@ -46,6 +46,8 @@
     <!-- Fontawesome  -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <!-- google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Special+Elite&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Antic+Didone&display=swap" rel="stylesheet">
@@ -78,15 +80,38 @@
   <div class="hero-container">
 
   <div class="column left">
-      <div id="tophat">Howard Center for Investigative Journalism | CNS | PBS</div>
-    <div class="content">
-        <h1> October 17, 2019</h1><br>
-        <h2> 34 Years To Freedom </h2><br>
-        <h3>Sentenced to a life sentence for murder, Earl Young spent over half of his life incarcerated. Recently released, Young now has a new lease on life. </h3><br>
-        <h4>By DeLon Thorton and Camila Velloso</h4>
+
+    <div id="tophat">
+      <div class="row">
+        <div class="col one">
+          <a href=""><i class="fa fa-home" style="color: white; font-size: 1.2em;"></i>&nbsp SERIES | UNEQUAL JUSTICE</a>
+      </div>
+
+      <div class="col">
+
     </div>
 
+    <div class="col three" style="color: white; font-size: 1.2em;">
+      <i class="fa fa-twitter"></i>&nbsp
+      <i class="fa fa-facebook"></i>
   </div>
+
+      </div>
+
+    </div>
+
+
+<div class="width">
+    <div class="content">
+        <h1> OCTOBER 17, 2019</h1><br>
+        <h2> 34 Years To Freedom </h2><br>
+        <h3>Sentenced to a life sentence for murder, Earl Young spent over half of his life incarcerated. Recently released, Young now has a new lease on life. </h3><br>
+        <h4>By DELON THORTON and CAMILA VELLOSO</h4>
+    </div>
+  </div>
+
+  </div>
+
   <div class="column right"></div>
 
 
@@ -97,12 +122,15 @@
 <div class="story-container">
   <a name="story"><div class="container"></a><br><br><br>
 
+
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p><br><br>
 
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, <a href="#">consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</a> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p><br><br>
 
 
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p><br><br>
+
+
 
 </div>
 </div>
