--- a/story-template1.html
+++ b/story-template1.html
@@ -46,6 +46,8 @@
     <!-- Fontawesome  -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <!-- google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Special+Elite&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Antic+Didone&display=swap" rel="stylesheet">
@@ -71,13 +73,37 @@
 </head>
 
 <body>
+  <!-- START Hero Container -->
+    <div class="hero-container">
+      <div id="tophat">
+        <div class="row">
+          <div class="col one">
+            <a href=""><i class="fa fa-home" style="color: white; font-size: 1.2em;"></i>&nbsp SERIES | UNEQUAL JUSTICE</a>
+        </div>
 
-<!-- START Hero Container -->
-<div class="hero-container">
-  <div id="tophat">Howard Center for Investigative Journalism | CNS | NPR</div>
-  <div class="cover-img relative-img" style="background-image: url('images/main-img.jpg')"></div>
+        <div class="col">
 
-</div> <!-- END Hero Container -->
+      </div>
+
+      <div class="col three" style="color: white; font-size: 1.2em;">
+        <i class="fa fa-twitter"></i>&nbsp
+        <i class="fa fa-facebook"></i>
+    </div>
+
+        </div>
+
+      </div>
+
+      <div class="cover-img relative-img" style="background-image: url('images/main-img.jpg')"></div>
+      <div class="centered">
+        <div class="article-title">Fixing The System</span></div><br>
+        <div class="article-desc">At the time of the Supreme Court decision in Montgomery v. Louisiana, Pennsylvania had 521 juvenile life without parole inmates. Now, it's down to 15.</div><br>
+        <div class="article-author">By CAMILA VELLOSO &nbsp | &nbsp OCTOBER 18, 2019</div>
+      </div>
+
+    </div><!-- END Hero Container -->
+
+
 
 <!-- START Main Story Container -->
 
@@ -92,6 +118,8 @@
 
 
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p><br><br>
+
+
 
 </div>
 </div>
