--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
     <!-- Fontawesome  -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 
+
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <!-- google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Special+Elite&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Antic+Didone&display=swap" rel="stylesheet">
@@ -75,9 +78,28 @@
   <!-- START Hero Container -->
 
   <div class="hero-container">
-    <div id="tophat">Howard Center for Investigative Journalism | CNS | PBS</div>
+    <div id="tophat">
+      <div class="row">
+        <div class="col one">
+          <a href=""><i class="fa fa-home" style="color: white; font-size: 1.2em;"></i>&nbsp SERIES | UNEQUAL JUSTICE</a>
+      </div>
+
+      <div class="col">
+
+    </div>
+
+    <div class="col three" style="color: white; font-size: 1.2em;">
+      <i class="fa fa-twitter"></i>&nbsp
+      <i class="fa fa-facebook"></i>
+  </div>
+
+      </div>
+      </div>
+
+    <!-- <div class="partners"> HOWARD CENTER | CNS | PBS</div> -->
+
     <div class="centered">
-      <p class="line-1 anim-typewriter">GROWING UP BEHIND BARS</p>
+      <p class="line-1 anim-typewriter">Growing Up Behind Bars</p>
 
       <div id="test"><hr>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
 
@@ -204,7 +226,7 @@
       </div>
       <div class="col-lg-9 col-md-12 col-sm-12">
         <h3>October 16, 2019</h3>
-        <a href="#" style="color: white;"><h4>Pennsylvania redresses juvenile lifer cases</h4></a>
+        <a href="story-template1.html" style="color: white;"><h4>Pennsylvania redresses juvenile lifer cases</h4></a>
         <p class="description-text">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
         <p class="author-two"> BY CAMILA VELLOSO </p>
       </div>
@@ -251,19 +273,19 @@
   <hr style="border: 1px solid white; width:50%;"><br>
 
 
-  <h1 style="color: #B5A7FA; font-size: 1.5em;">About the project</h1><br>
+  <h1 style="color: #D9B269; font-size: 1.5em;">About the project</h1><br>
   <p class="about">Sed ullamcorper morbi tincidunt ornare massa eget. Dignissim diam quis enim lobortis scelerisque. Morbi blandit cursus risus at.
     <br><br> Mus mauris vitae ultricies leo integer malesuada. Eget nunc lobortis mattis aliquam faucibus purus. Mattis pellentesque id nibh tortor id aliquet lectus.
     <br><br> Justo eget magna fermentum iaculis eu non diam. Magna fringilla urna porttitor rhoncus dolor purus non. Id neque aliquam vestibulum morbi blandit cursus.
     <br><br>Nunc sed id semper risus in. Vitae congue eu consequat ac felis donec et odio. Ullamcorper velit sed ullamcorper morbi tincidunt ornare. Pretium quam vulputate dignissim suspendisse in.
     <br><br>Et tortor consequat id porta nibh venenatis cras sed. Nibh mauris cursus mattis molestie a. Imperdiet dui accumsan sit amet. Arcu risus quis varius quam quisque id. Vel fringilla est ullamcorper eget.
   </p><br><br>
-  <h1 style="color: #B5A7FA; font-size: 1.5em;">Credits</h1><br>
-  <p class="credits"><b>Webite design and development:</b> Camila Velloso<br><br>
+  <h1 style="color: #D9B269; font-size: 1.5em;">Credits</h1><br>
+  <p class="credits"><b>Web design and development:</b> Camila Velloso<br><br>
                      <b>Reporting and writing:</b> Camila Velloso, Hannah Gaskill, Emily Top, Athiyah Azeem, Dominique Janifer, Lynsey Jeffery, Jamie Kerner, Lauren Pery, Sara Salimi and DeLon Thorton<br><br>
                      <b>Video editing:</b> TBD<br><br>
                      <b>Podcasts:</b> Hannah Gaskill<br><br>
-                     <b>Project editors:</b> Tom Bettag, Adam Marton, Sean Mussenden and Kathy Best<br><br>
+                     <b>Project editors:</b> Kathy Best, Tom Bettag, Marty Kaiser, Adam Marton and Sean Mussenden<br><br>
                      <b>Audience engagement:</b> Alex Pyles<br><br>
   </p>
 
