--- a/profile.html
+++ b/profile.html
@@ -105,7 +105,7 @@
     <div class="content">
         <h1> OCTOBER 17, 2019</h1><br>
         <h2> 34 Years To Freedom </h2><br>
-        <h3>Sentenced to a life sentence for murder, Earl Young spent over half of his life incarcerated. Recently released, Young now has a new lease on life. </h3><br>
+        <h3>Sentenced to life for murder, Earl Young spent over half of his life incarcerated. Recently released, Young now has a new lease on life. </h3><br>
         <h4>By DELON THORTON and CAMILA VELLOSO</h4>
     </div>
   </div>
