--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
       <div class="card-body">
         <h5 class="card-title">Earl Young</h5>
         <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <button class="button-group"><a href="profile.html">Read more</a></button>
+        <button class="button-group"><a href="profile.html" style="color: black; text-decoration: none !important;">Read more</a></button>
       </div>
     </div>
   </div>
