--- a/index.html
+++ b/index.html
@@ -135,11 +135,11 @@
       <div class="embed-responsive embed-responsive-16by9">
         <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/M2GgIXkvFeE"></iframe>
       </div>
-      <p class="video-caption">Video courtesy PBS NewsHour, produced in partnership with the Howard Center for Investigative Journalism and Capital News Service. It was produced by John Yang of PBS NewsHour and Camila Velloso, Hannah Gaskill, Emily Top, Athiyah Azeem, Dominique Janifer, Lynsey Jeffery, Jamie Kerner, Lauren Pery, Sara Salimi and DeLon Thorton of Capital News Service.</p>
+      <p class="video-caption">Video courtesy PBS NewsHour, produced in partnership with the Howard Center for Investigative Journalism and Capital News Service. It was produced by John Yang of PBS NewsHour and Camila Velloso, Hannah Gaskill, Emily Top, Athiyah Azeem, Dominique Janifer, Lynsey Jeffery, Jamie Kerner, Lauren Pery, Sara Salimi and DeLon Thornton of Capital News Service.</p>
     </div><br>
 
 
-    <!-- <p class="caption">Video courtesy PBS NewsHour, produced in partnership with Injustice Watch and Capital News Service. It was produced by John Yang of PBS NewsHour and Camila Velloso, Hannah Gaskill, Emily Top, Athiyah Azeem, Dominique Janifer, Lynsey Jeffery, Jamie Kerner, Lauren Pery, Sara Salimi and DeLon Thorton of Capital News Service.</p><br>-->
+    <!-- <p class="caption">Video courtesy PBS NewsHour, produced in partnership with Injustice Watch and Capital News Service. It was produced by John Yang of PBS NewsHour and Camila Velloso, Hannah Gaskill, Emily Top, Athiyah Azeem, Dominique Janifer, Lynsey Jeffery, Jamie Kerner, Lauren Pery, Sara Salimi and DeLon Thornton of Capital News Service.</p><br>-->
 
 
     <h1>Unequal Justice: Maryland's Parole System</h1>
@@ -282,7 +282,7 @@
   </p><br><br>
   <h1 style="color: #D9B269; font-size: 1.5em;">Credits</h1><br>
   <p class="credits"><b>Web design and development:</b> Camila Velloso<br><br>
-                     <b>Reporting and writing:</b> Camila Velloso, Hannah Gaskill, Emily Top, Athiyah Azeem, Dominique Janifer, Lynsey Jeffery, Jamie Kerner, Lauren Pery, Sara Salimi and DeLon Thorton<br><br>
+                     <b>Reporting and writing:</b> Camila Velloso, Hannah Gaskill, Emily Top, Athiyah Azeem, Dominique Janifer, Lynsey Jeffery, Jamie Kerner, Lauren Pery, Sara Salimi and DeLon Thornton<br><br>
                      <b>Video editing:</b> TBD<br><br>
                      <b>Podcasts:</b> Hannah Gaskill<br><br>
                      <b>Project editors:</b> Kathy Best, Tom Bettag, Marty Kaiser, Adam Marton and Sean Mussenden<br><br>
